# paperless_pre_consume_ocr

./: .gitignore  README.md  exceptions.py  imageconverter.py  logger.py  ocrprocessor.py  paperless_pre_consume_ocr.py  paperlessenvironment.py  pdfprocessor.py  pyproject.toml
.github/workflows/: tests.yml
examples/docker/: Dockerfile  docker-compose.example.yml
src/: exceptions.py  imageconverter.py  logger.py  ocrprocessor.py  paperless_pre_consume_ocr.py  paperlessenvironment.py  pdfprocessor.py
src/paperless_pre_consume_ocr/: __init__.py  __main__.py  cli.py  environment.py  exceptions.py  image_converter.py  image_ops.py  ocr.py  pdf.py
src/paperless_pre_consume_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_imageconverter.py  test_main.py  test_ocrprocessor.py  test_paperlessenvironment.py  test_pdfprocessor.py
tests/integration/: conftest.py  test_image_and_ocr.py
